--- a/flink-connectors/flink-sql-connector-kafka-0.10/pom.xml
+++ b/flink-connectors/flink-sql-connector-kafka-0.10/pom.xml
@@ -174,6 +174,14 @@ under the License.
 									<pattern>org.apache.flink.connector.catalog</pattern>
 									<shadedPattern>org.apache.flink.kafka010.shaded.org.apache.flink.connector.catalog</shadedPattern>
 								</relocation>
+								<relocation>
+									<pattern>org.byted.security</pattern>
+									<shadedPattern>org.apache.flink.kafka010.shaded.org.byted.security</shadedPattern>
+								</relocation>
+								<relocation>
+									<pattern>META-INF/native/liborg_byted_security_shaded</pattern>
+									<shadedPattern>META-INF/native/liborg_apache_flink_kafka010_shaded_org_byted_security_shaded</shadedPattern>
+								</relocation>
 							</relocations>
 						</configuration>
 					</execution>
